--- a/Info.plist
+++ b/Info.plist
@@ -2,12 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
     <dict>
-        <key>CFBundleName</key> <string>MiniRacer</string>
-        <key>CFBundleDisplayName</key> <string>MiniRacer</string>
-        <key>CFBundleIdentifier</key> <string>ca.henk.miniracer</string>
+        <key>CFBundleName</key> <string>Ephemeros</string>
+        <key>CFBundleDisplayName</key> <string>Ephemeros</string>
+        <key>CFBundleIdentifier</key> <string>ca.henk.ephemeros</string>
         <key>CFBundleVersion</key> <string>0.0.1</string>
         <key>CFBundlePackageType</key> <string>APPL</string>
-        <key>CFBundleSignature</key> <string>mrcr</string>
-        <key>CFBundleExecutable</key> <string>MiniRacer</string>
+        <key>CFBundleSignature</key> <string>epms</string>
+        <key>CFBundleExecutable</key> <string>Ephemeros</string>
     </dict>
 </plist>
